[tool.poetry]
name = "greenfield-python-sdk"
version = "0.6.1"
description = "A Greenfield python SDK"
authors = ["BNB Chain"]
readme = "README.md"
packages = [{include = "greenfield_python_sdk"}]

[tool.poetry.dependencies]
python = "^3.9"
betterproto = {git = "https://github.com/danielgtaylor/python-betterproto", rev = "e7f07fa2a113bcaef42571b4a67b3ddfbe0ab935"}
grpcio-tools = "1.63.0"
httpx = "0.27.0"
jinja2 = "3.1.4"
pydantic = "2.5.2"
grpclib = "0.4.6"
bech32 = "1.2.0"
mnemonic = "0.20"
hdwallets = "0.1.2"
aiohttp = "3.9.4"
safe-pysha3 = "1.0.4"
pycryptodome = "3.19.1"
coincurve = "18.0.0"
alt-betterproto = "2.0.1"
eth-keys = "0.5.1"
web3 = "6.14.0"
xmltodict = "0.13.0"
reedsolo = "1.7.0"
python-dotenv = "1.0.1"
pytest-timeout = "2.3.1"
pydantic-settings = "2.2.1"
py-ecc = "^7.0.0"
html-to-json = "^2.0.0"
secp256k1 = "^0.14.0"

[tool.poetry.group.dev.dependencies]
mypy = "*"
black = "*"
isort = "*"
flake8 = "*"
pytest = "*"
pytest-cov = "*"
pytest-asyncio = "*"
coverage = "*"
pytest-mock = "3.12.0"

[tool.pytest.ini_options]
markers = [
    "unit: marks tests as unitary",
    "e2e: marks tests as end to end",
]
[tool.isort]
profile = "black"
line_length = 120


[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"